<resources>
    <string name="app_name">SafeQuake</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Beranda</string>
    <string name="title_history">Riwayat</string>
    <string name="title_education">Edukasi</string>
    <string name="title_setting">Pengaturan</string>
    <string name="title_evaluation">Evaluasi</string>
    <string name="switch_theme">Ganti Ke Tema Gelap</string>
    <string name="dark_mode">Mode Gelap</string>
    <string name="notification">Notifikasi</string>
    <string name="about_application">Tentang</string>
    <string name="artikel">Artikel</string>
    <string name="berita">Berita</string>
    <string name="risk_core">Skor Resiko</string>
    <string name="information_on_risk_level">Keterangan Tingkat Resiko: 0-100, Rendah-Tinggi</string>
    <string name="action_recommendation">Rekomendasi Tindakan</string>
    <string name="analysis">Analisis</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="jenis_bangunan">Jenis Bangunan</string>
    <string name="material_bangunan">Material Bangunan</string>
    <string name="form_evaluasi">Form Evaluasi</string>
    <string name="information">Isi form di bawah untuk mendapatkan hasil evaluasi yang anda inginkan</string>
</resources>