<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bottom_nav_background"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/risk_core"
            android:textSize="20sp"
            android:textColor="@color/colorSubtitle"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_on_risk_level"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_recommendation"
            android:textColor="@color/colorSubtitle"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backrgound_recommendation"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="- Evakuasi ke tempat aman untuk tsunami."
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="- Hindari wilayah dengan tanah labil untuk longsor."
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="- Tingkatkan kesadaran untuk daerah banjir tinggi."
                android:layout_marginBottom="8dp" />
        </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/analysis"
        android:layout_marginTop="4dp"
        android:id="@+id/btn_analysis" />
    </LinearLayout>
</ScrollView>
