<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.setting.SettingFragment">

    <!-- CardView for Tagline -->
    <androidx.cardview.widget.CardView
        android:id="@+id/appTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/Tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_setting"
                style="@style/TextContent.BodyMedium.Bold"
                android:textSize="24sp"
                android:gravity="center"
                android:textColor="@color/colorSubtitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/switch_theme"
                android:textColor="@color/colorSubtitle"
                android:textSize="14sp"
                android:gravity="center" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Dark Mode Label -->
    <TextView
        style="@style/TextContent.BodyMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:textColor="@color/colorSubtitle"
        app:layout_constraintTop_toBottomOf="@id/appTag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/switch_theme"
        app:layout_constraintBottom_toBottomOf="@id/switch_theme"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:thumbTint="?attr/colorControlActivated"
        android:trackTint="?attr/colorControlNormal"
        app:layout_constraintTop_toBottomOf="@id/appTag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>