<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/bottom_nav_background"
        app:itemIconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_navigation" />


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_background"
        app:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Icon Notification di kiri -->
        <ImageView
            android:id="@+id/notification_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/notification"
            android:src="@drawable/clarity__notification_solid"
            app:tint="@color/onPrimary" />

        <!-- Title Aplikasi di tengah -->
        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/onPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Icon About di kanan -->
        <ImageView
            android:id="@+id/about_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/about_application"
            android:src="@drawable/akar_icons__question_fill"
            app:tint="@color/onPrimary" />
    </com.google.android.material.appbar.MaterialToolbar>


</androidx.constraintlayout.widget.ConstraintLayout>
